--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.3 2003-05-04 21:15:53 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.4 2003-05-19 21:49:07 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -152,8 +152,8 @@ copyright reasons).
 
 <p>It should also be noted that the current version of GLFW for AmigaOS is
 only a subset of the full GLFW API. Most of the core functionality has
-been implemented, but there are still some things missing (e.g. joystick
-support, iconification handling etc).
+been implemented, but there are still some things missing (e.g. hiding the
+mouse cursor in windowed mode, iconification handling etc).
 
 
 <!----------------------------------------------------------------------->
@@ -379,14 +379,23 @@ style comments.
 
 <p><h3>v2.4.2</h3>
 <ul>
- <li>Added QNX support</li>
- <li>Bugfix: [X11] CR/LF was PC style (blame my WinCVS configuration)</li>
+ <li>Bugfix: [Win32] glfwSetWindowSize now sets the size of the client
+     area, NOT the entire window, meaning that there is a 1:1 relationship
+     between glfwSetWindowSize and glfwGetWindowSize</li>
+ <li>[X11] Added QNX support</li>
+ <li>Bugfix: [X11] When mouse cursor is hidden, mouse sensitivity is no
+     longer degraded (not 100% true - still some occasional jerks)</li>
+ <li>Bugfix: [X11] Source files EOL was PC style (CR/LF) in v2.4.1 (blame
+     my WinCVS configuration)</li>
+ <li>Bugfix: [X11] (De)Iconification now works for fullscreen windows</li>
  <li>Bugfix: [X11] If a fullscreen window loses focus, it is properly
      iconified</li>
  <li>Bugfix: [X11] When a GLFW window is closed, input focus is properly
      released</li>
+ <li>[AmigaOS] Added joystick support</li>
+ <li>[AmigaOS] Mouse cursor positioning is now implemented</li>
  <li>Bugfix: [AmigaOS] glfwGetWindowParam now returns proper values for
-     all parameters (except for ACCELERATED)</li>
+     all parameters (except for GLFW_ACCELERATED)</li>
 </ul>
 
 <p><h3>v2.4.1</h3>
@@ -797,7 +806,7 @@ useful for OpenGL development.
 
   <li>Ozzy @ <a href="http://www.orkysquad.org" target="_blank">Orkysquad</a>,
   for his dedication to GLFW, for debugging my source, and for his
-  valuable experience with game development.<br><br>
+  valuable experience with game development.</li><br><br>
 
   <li>Jeff Molofee, the author of the excellent OpenGL tutorials at <a
   href="http://nehe.gamedev.net/" target="_blank">NeHe Productions</a>.
@@ -813,7 +822,10 @@ useful for OpenGL development.
   <li>Gerald Franz, who made GLFW compile under IRIX, and supplied patches
   for the X11 keyboard translation routine.</li><br><br>
 
-  <li>Dmitri Shuralyov, for bug reports and testing.</li><br><br>
+  <li>Frank Wille, for helping me with the AmigaOS port and making GLFW
+  compile under IRIX 5.3.</li><br><br>
+
+  <li>Matt Sealey, for helping me with the MorphOS port.</li><br><br>
 
   <li>Paul R. Deppe, who helped me with Cygwin support, and made an
   adaption of <a href="http://plib.sourceforge.net/" target="_blank">PLIB</a>
@@ -824,6 +836,10 @@ useful for OpenGL development.
   <li>Toni Jovanoski, for helping me with the MASM32 port of GLFW, and
   supplying the example program and fixed OpenGL & GLU bindings for
   MASM32.</li><br><br>
+
+  <li>Dmitri Shuralyov, Samuli Tuomola, Santi Zupancic, Sylvain
+  Hellegouarch, and many others for support, bug reports and
+  testing.</li><br><br>
 
   <li><a href="http://www.opengl.org/" target="_blank">www.opengl.org</a>,
   and all the people on the discussion forums there that have provided
