--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.7 2003-10-20 22:34:35 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.8 2003-10-29 22:04:13 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -80,11 +80,11 @@ Windows compilers, a Win32 DLL will also be compiled.
   <li>Unix or Unix-like systems running the X Window System (auto detect
       compiler, or force GCC)</li>
   <li>VBCC for AmigaOS</li>
-<!--  <li>Apple SDK (GCC) for Mac OS X</li> -->
+  <li>Apple SDK (GCC) for Mac OS X</li>
 </ol>
 
 <p>If your compiler/system is not in the list, you will have to create new
-makefiles in the <b>lib\win32</b>, <b>lib/x11</b> or <b>lib/amigaos</b> <!--or <b>lib/macosx</b>-->
+makefiles in the <b>lib\win32</b>, <b>lib/x11</b>, <b>lib/amigaos</b> or <b>lib/macosx</b>
 directory, and in the <b>examples</b> directory. If you have any problems,
 do not hesitate to contact me (I may not know how your compiler works, but
 I know the GLFW source code). I would also like to add support for more
@@ -396,28 +396,35 @@ style comments.
 
 <p><h3>v2.4.2</h3>
 <ul>
+ <li>Preliminary native Mac OS X support (via the Carbon interface)</li>
  <li>[Win32] Added OpenWatcom compiler support (thanks Sebastian
      Schuberth!)</li>
- <li>Bugfix: [Win32] glfwSetWindowSize now sets the size of the client
+ <li>[Win32] Changed fallback timer from GetTickCount to timeGetTime,
+     which usually provides better resolution</li>
+ <li>[Win32] Bugfix: Accumulator buffer selection should be more
+     robust</li>
+ <li>[Win32] Bugfix: If stereo rendering is requested, and no stereo pixel
+     format could be created, glfwOpenWindow now fails</li>
+ <li>[Win32] Bugfix: glfwSetWindowSize now sets the size of the client
      area, NOT the entire window, meaning that there is a 1:1 relationship
      between glfwSetWindowSize and glfwGetWindowSize</li>
-     Intel Hyper-Threading enabled systmes)</li>
- <li>[X11] Added FreeBSD support</li>
- <li>[X11] Added QNX support</li>
+ <li>[X11] Added FreeBSD and QNX support</li>
  <li>[X11] Added support for non-pthread capable systmes</li>
- <li>Bugfix: [X11] When mouse cursor is hidden, mouse sensitivity is no
+ <li>[X11] Hopefully more robust configuration script (compile.sh)</li>
+ <li>[X11] Bugfix: When mouse cursor is hidden, mouse sensitivity is no
      longer degraded</li>
- <li>Bugfix: [X11] Source files EOL was PC style (CR/LF) in v2.4.1 (blame
+ <li>[X11] Bugfix: Source files EOL was PC style (CR/LF) in v2.4.1 (blame
      my WinCVS configuration)</li>
- <li>Bugfix: [X11] (De)Iconification now works for fullscreen windows</li>
- <li>Bugfix: [X11] If a fullscreen window loses focus, it is properly
+ <li>[X11] Bugfix: (De)Iconification now works for fullscreen windows</li>
+ <li>[X11] Bugfix: If a fullscreen window loses focus, it is properly
      iconified</li>
- <li>Bugfix: [X11] When a GLFW window is closed, input focus is properly
+ <li>[X11] Bugfix: When a GLFW window is closed, input focus is properly
      released</li>
  <li>[x86 CPUs] Improved RDTSC timing (e.g. RDTSC support on single-CPU
+     Intel Hyper-Threading enabled systmes)</li>
  <li>[AmigaOS] Added joystick support</li>
  <li>[AmigaOS] Mouse cursor positioning is now implemented</li>
- <li>Bugfix: [AmigaOS] glfwGetWindowParam now returns proper values for
+ <li>[AmigaOS] Bugfix: glfwGetWindowParam now returns proper values for
      all parameters (except for GLFW_ACCELERATED)</li>
 </ul>
 
@@ -425,10 +432,10 @@ style comments.
 <ul>
  <li>Added AmigaOS support (preliminary)</li>
  <li>GLFW for the X Window System now works under Mac OS X</li>
- <li>Bugfix: [Win32] glfwWaitCond treated the timeout as milliseconds
+ <li>[Win32] Bugfix: glfwWaitCond treated the timeout as milliseconds
      instead of seconds</li>
- <li>Bugfix: [X11] GLFW should now compile under IRIX v5.3</li>
- <li>Bugfix: [X11] GLFW should now compile with Kylix</li>
+ <li>[X11] Bugfix: GLFW should now compile under IRIX v5.3</li>
+ <li>[X11] Bugfix: GLFW should now compile with Kylix</li>
 </ul>
 
 <p><h3>v2.4</h3>
@@ -446,13 +453,13 @@ style comments.
      glfwSwapBuffers</li>
  <li>[X11] Added support for sysctl for querying the number of processors
      in the system (if POSIX sysconf is not supported)</li>
- <li>Bugfix: [X11] compile.sh now works with Sun sh (and hopefully others
+ <li>[X11] Bugfix: compile.sh now works with Sun sh (and hopefully others
      too)</li>
- <li>Bugfix: [X11] compile.sh now detects the need for -ldl when dlopen is
+ <li>[X11] Bugfix: compile.sh now detects the need for -ldl when dlopen is
      used</li>
- <li>Bugfix: [Win32] When closing a fullscreen window under Win 9x/NT4,
+ <li>[Win32] Bugfix: When closing a fullscreen window under Win 9x/NT4,
      the task bar icon now disappears properly</li>
- <li>Bugfix: [Win32] GLFW should now compile on a wider range of MSVC
+ <li>[Win32] Bugfix: GLFW should now compile on a wider range of MSVC
      compilers (e.g. .NET) - Thanks Tim Little!</li>
 </ul>
 
@@ -481,12 +488,12 @@ style comments.
  <li>Added OpenGL stereo rendering support</li>
  <li>Added a function for parsing the OpenGL version string
      (glfwGetGLVersion)</li>
- <li>Bugfix: [x86] Hopefully the CPU core clock dependent timer RDTSC will
+ <li>[x86] Bugfix: Hopefully the CPU core clock dependent timer RDTSC will
      never be used on CPUs with variable core frequencies anymore</li>
- <li>Bugfix: [X11] GLFW could create stereo rendering capable windows,
+ <li>[X11] Bugfix: GLFW could create stereo rendering capable windows,
      even if it was not requested (GLFW v2.2.x did not support selection
      of stereo rendering)</li>
- <li>Bugfix: [X11] glfwGetProcAddress returned NULL on most systems (even
+ <li>[X11] Bugfix: glfwGetProcAddress returned NULL on most systems (even
      on those that supported glXGetProcAddressARB). Now GLFW assumes that
      glXGetProcAddressARB is supported on all systems, which solves the
      bug, but may result in compiler errors on some systems (please let me
@@ -497,10 +504,10 @@ style comments.
 <ul>
  <li>Bugfix: Checking for GL_SGIS_generate_mipmap is more robust</li>
  <li>Bugfix: glfwLoadTexture2D will now fail if no window is opened</li>
- <li>Bugfix: [Win32] Right shift was not detected under Win 9x/ME (it is
+ <li>[Win32] Bugfix: Right shift was not detected under Win 9x/ME (it is
      still not as good as under NT/2K/XP, but at least you get right
      shifts)</li>
- <li>Bugfix: [X11] Visuals are now selected more accurately. For instance,
+ <li>[X11] Bugfix: Visuals are now selected more accurately. For instance,
      glfwOpenWindow will no longer fail if you request a 24-bit color
      buffer if only 16-bit color visuals are avilable (which means that
      pong3d should work on 16-bit displays).</li>
@@ -508,11 +515,11 @@ style comments.
 
 <p><h3>v2.2.2</h3>
 <ul>
- <li>Bugfix: [Win32] Windows did not always get focus (this was a tough
+ <li>[Win32] Bugfix: Windows did not always get focus (this was a tough
      one!)</li>
- <li>Bugfix: [Win32] glfwGetWindowParam did not work with
+ <li>[Win32] Bugfix: glfwGetWindowParam did not work with
      GLFW_ACCUM_*_BITS or GLFW_AUX_BUFFERS</li>
- <li>Bugfix: [X11] Linux joystick Y axis positions were reversed</li>
+ <li>[X11] Bugfix: Linux joystick Y axis positions were reversed</li>
 </ul>
 
 <p><h3>v2.2.1</h3>
@@ -536,15 +543,15 @@ style comments.
      glfwInit() is called. This means that there is no need to link with
      gdi32.lib or winmm.lib when using the static version of GLFW, which
      should make GLFW usage more convenient.</li>
- <li>Bugfix: [Win32] Greatly improved keyboard input (detect left/right
+ <li>[Win32] Bugfix: Greatly improved keyboard input (detect left/right
      CTRL etc)</li>
- <li>Bugfix: [Win32] glfwExtensionSupported now detects all WGL extensions
+ <li>[Win32] Bugfix: glfwExtensionSupported now detects all WGL extensions
      (e.g. WGL_ARB_pbuffer)</li>
- <li>Bugfix: [Win32] Mouse cursor was not re-hidden when a GLFW window was
+ <li>[Win32] Bugfix: Mouse cursor was not re-hidden when a GLFW window was
      deselected and then selected again (with ALT+TAB)</li>
- <li>Bugfix: [X11] Minor bug in the SGI timer - and ugly (unintended) SGI
+ <li>[X11] Bugfix: Minor bug in the SGI timer - and ugly (unintended) SGI
      timer debug info removed</li>
- <li>Bugfix: [X11] glfwGetDesktopMode and glfwGetVideoModes no longer give
+ <li>[X11] Bugfix: glfwGetDesktopMode and glfwGetVideoModes no longer give
      segmentation faults if no X server is available</li>
 </ul>
 
@@ -582,13 +589,13 @@ style comments.
      GLFW_RED_BITS)</li>
  <li>Updated GLFW documentation (GLFW Users Guide and GLFW Reference
      Manual) to reflect the changes in the API</li>
- <li>Bugfix: [Win32] Corrected Cygwin toplevel makefile entry</li>
- <li>Bugfix: [Win32] Fixed event lag bug</li>
- <li>Bugfix: [Win32] Fixed Radeon 8500 crash</li>
- <li>Bugfix: [X11] Fixed the window close bug</li>
- <li>Bugfix: [X11] Iconification/deactivation is now detected</li>
- <li>Bugfix: [X11] Non-OpenGL visuals are not listed anymore</li>
- <li>Bugfix: [XFree86] Undesired video mode changes are now prevented</li>
+ <li>[Win32] Bugfix: Corrected Cygwin toplevel makefile entry</li>
+ <li>[Win32] Bugfix: Fixed event lag bug</li>
+ <li>[Win32] Bugfix: Fixed Radeon 8500 crash</li>
+ <li>[X11] Bugfix: Fixed the window close bug</li>
+ <li>[X11] Bugfix: Iconification/deactivation is now detected</li>
+ <li>[X11] Bugfix: Non-OpenGL visuals are not listed anymore</li>
+ <li>[XFree86] Bugfix: Undesired video mode changes are now prevented</li>
 </ul>
 
 <p><h3>v2.0.3</h3>
@@ -604,12 +611,12 @@ style comments.
 <ul>
  <li>Added a makefile option for building for X11 with 'cc' rather than
      'gcc' (useful for IRIX users for instance).</li>
- <li>Bugfix: [Win32] Mouse coordinates are now relative to the window
+ <li>[Win32] Bugfix: Mouse coordinates are now relative to the window
      upper left corner, which also means that disabling the mouse cursor
      in windowed mode should work much better.</li>
- <li>Bugfix: [X11] Added a bunch of more keys that are recognized by
+ <li>[X11] Bugfix: Added a bunch of more keys that are recognized by
      GLFW.</li>
- <li>Bugfix: [X11] glfwGetNumberOfProcessors now works for IRIX (earlier
+ <li>[X11] Bugfix: glfwGetNumberOfProcessors now works for IRIX (earlier
      versions of GLFW would not compile under IRIX).</li>
 </ul>
 
@@ -617,13 +624,13 @@ style comments.
 <ul>
  <li>glfwTerminate() will now be called automatically upon normal program
      termination (using atexit())</li>
- <li>Bugfix: [Win32] Buffer-swapping did not work if a window lost
+ <li>[Win32] Bugfix: Buffer-swapping did not work if a window lost
      focus.</li>
- <li>Bugfix: [Win32] Top level Makefile did not work under Windows
+ <li>[Win32] Bugfix: Top level Makefile did not work under Windows
      9x.</li>
- <li>Bugfix: [Win32] NULL declaratoin in glfw.h was not MSVC 7.x
+ <li>[Win32] Bugfix: NULL declaratoin in glfw.h was not MSVC 7.x
      compatible.</li>
- <li>Bugfix: [X11] GLFW would not build with C++ (e.g. g++).</li>
+ <li>[X11] Bugfix: GLFW would not build with C++ (e.g. g++).</li>
 </ul>
 
 <h3>v2.0</h3>
@@ -746,7 +753,6 @@ style comments.
 <tr valign="top"><td>&nbsp;&nbsp;platform.h</td><td>&nbsp;</td><td>Part of the GLFW source</td></tr>
 <tr valign="top"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
 
-<!--
 <tr valign="top"><td><b>&nbsp;macosx/</b></td><td>&nbsp;</td><td>Directory containing the Mac OS X implementation for GLFW</td></tr>
 <tr valign="top"><td>&nbsp;&nbsp;Makefile.macosx.gcc</td><td>&nbsp;</td><td>Makefile for GCC for Mac OS X</td></tr>
 <tr valign="top"><td>&nbsp;&nbsp;macosx_enable.m</td><td>&nbsp;</td><td>Part of the GLFW source</td></tr>
@@ -759,7 +765,6 @@ style comments.
 <tr valign="top"><td>&nbsp;&nbsp;macosx_window.m</td><td>&nbsp;</td><td>Part of the GLFW source</td></tr>
 <tr valign="top"><td>&nbsp;&nbsp;platform.h</td><td>&nbsp;</td><td>Part of the GLFW source</td></tr>
 <tr valign="top"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
--->
 
 <tr valign="top"><td><b>&nbsp;win32/</b></td><td>&nbsp;</td><td>Directory containing the Win32 implementation for GLFW</td></tr>
 <tr valign="top"><td>&nbsp;&nbsp;Makefile.win32.bcc</td><td>&nbsp;</td><td>Makefile for Borland C++ 5.x for Windows</td></tr>
