Added note about the new zlib license

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.8 2003-10-29 22:04:13 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.9 2003-10-30 20:53:56 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -397,6 +397,8 @@ style comments.
 <p><h3>v2.4.2</h3>
 <ul>
  <li>Preliminary native Mac OS X support (via the Carbon interface)</li>
+ <li>Changed license to the zlib license (almost identical to the previous
+     GLFW license)</li>
  <li>[Win32] Added OpenWatcom compiler support (thanks Sebastian
      Schuberth!)</li>
  <li>[Win32] Changed fallback timer from GetTickCount to timeGetTime,
