Added OSI Certified mark in order to comply with OSI certification

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.9 2003-10-30 20:53:56 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.10 2003-10-30 21:44:00 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -9,10 +9,21 @@
 <body>
 
 <!-- TITLE -------------------------------------------------------------->
-<center>
-<font face="bookman old style,arial" size=+4><b>GLFW v2.4.2</b></font><br>
-<font face="bookman old style,arial" size=+3>source distribution</font>
-</center>
+<table border=0 cellspacing=0 cellpadding=0 width=100%>
+ <tr>
+  <td width=90 valign=top align=left>
+   <a href="http://www.opengl.org/" target="_top"><img src="images/opengl.gif" border="0" width="84" height="44"></a><br>
+   <a href="http://www.opensource.org/docs/definition.php" target="_top"><img src="images/osicert.png" border="0" width="72" height="60"></a>
+  </td>
+  <td align=center>
+   <font face="bookman old style,arial" size=+4><b>GLFW v2.4.2</b></font><br>
+   <font face="bookman old style,arial" size=+3>source distribution</font>
+  </td>
+  <td width=90 valign=top align=right>
+   &nbsp;
+  </td>
+ </tr>
+</table>
 
 
 <!-- CONTENTS ----------------------------------------------------------->
