--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.10 2003-10-30 21:44:00 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.11 2003-10-30 21:51:59 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -409,7 +409,7 @@ style comments.
 <ul>
  <li>Preliminary native Mac OS X support (via the Carbon interface)</li>
  <li>Changed license to the zlib license (almost identical to the previous
-     GLFW license)</li>
+     GLFW license), so now GLFW is OSI Certified</li>
  <li>[Win32] Added OpenWatcom compiler support (thanks Sebastian
      Schuberth!)</li>
  <li>[Win32] Changed fallback timer from GetTickCount to timeGetTime,
