Changed OSI Certified logo file to GIF format

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.11 2003-10-30 21:51:59 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.12 2003-11-07 21:46:29 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -13,7 +13,7 @@
  <tr>
   <td width=90 valign=top align=left>
    <a href="http://www.opengl.org/" target="_top"><img src="images/opengl.gif" border="0" width="84" height="44"></a><br>
-   <a href="http://www.opensource.org/docs/definition.php" target="_top"><img src="images/osicert.png" border="0" width="72" height="60"></a>
+   <a href="http://www.opensource.org/docs/definition.php" target="_top"><img src="images/osicert.gif" border="0" width="72" height="60"></a>
   </td>
   <td align=center>
    <font face="bookman old style,arial" size=+4><b>GLFW v2.4.2</b></font><br>
