Changed links to PDF manuals

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.12 2003-11-07 21:46:29 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.13 2003-11-08 12:55:08 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -244,8 +244,8 @@ gl.h, glu.h etc. are located).
   <li>How to compile programs that use GLFW</li>
 </ol>
 
-<p>The first point is covered in the <a href="docs/glfwug14.pdf">GLFW
-Users Guide</a> and the <a href="docs/glfwrm14.pdf">GLFW Reference
+<p>The first point is covered in the <a href="docs/glfwug.pdf">GLFW
+Users Guide</a> and the <a href="docs/glfwrm.pdf">GLFW Reference
 Manual</a>, and I suggest that you read at least the Users Guide, since
 it is a good introduction to the GLFW API.
 
