Added more news (LaTeX docs)

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.15 2003-11-12 18:05:45 elmindreda Exp $ -->
+<!-- $Id: readme.html,v 1.16 2003-11-12 22:41:55 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -449,6 +449,8 @@ version of GLFW.
  <li>Preliminary native Mac OS X support (via the Carbon interface)</li>
  <li>Changed license to the zlib license (almost identical to the previous
      GLFW license), so now GLFW is OSI Certified</li>
+ <li>Rewrote the GLFW documentation in LaTeX, meaning several improvements
+     (both visual and practical)</li>
  <li>[Win32] Added OpenWatcom compiler support (thanks Sebastian
      Schuberth!)</li>
  <li>[Win32] Changed fallback timer from GetTickCount to timeGetTime,
@@ -739,10 +741,10 @@ version of GLFW.
 <tr valign="top"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
 
 <tr valign="top"><td><b>examples/</b></td><td>&nbsp;</td><td>Directory containing several example programs</td></tr>
-<!--<tr valign="top"><td>&nbsp;Info.plist</td><td>&nbsp;</td><td>Used for creating Mac OS X bundles</td></tr>-->
-<!--<tr valign="top"><td>&nbsp;MakeBundle.sh</td><td>&nbsp;</td><td>Used for creating Mac OS X bundles</td></tr>-->
+<tr valign="top"><td>&nbsp;Info.plist</td><td>&nbsp;</td><td>Used for creating Mac OS X bundles</td></tr>
+<tr valign="top"><td>&nbsp;MakeBundle.sh</td><td>&nbsp;</td><td>Used for creating Mac OS X bundles</td></tr>
 <tr valign="top"><td>&nbsp;Makefile.amigaos.vbcc</td><td>&nbsp;</td><td>Makefile for VBCC for AmigaOS</td></tr>
-<!--<tr valign="top"><td>&nbsp;Makefile.macosx.gcc</td><td>&nbsp;</td><td>Makefile for GCC for Mac OS X</td></tr>-->
+<tr valign="top"><td>&nbsp;Makefile.macosx.gcc</td><td>&nbsp;</td><td>Makefile for GCC for Mac OS X</td></tr>
 <tr valign="top"><td>&nbsp;Makefile.win32.bcc</td><td>&nbsp;</td><td>Makefile for Borland C++ 5.x for Windows</td></tr>
 <tr valign="top"><td>&nbsp;Makefile.win32.cygwin</td><td>&nbsp;</td><td>Makefile for Cygwin for Windows</td></tr>
 <tr valign="top"><td>&nbsp;Makefile.win32.lcc</td><td>&nbsp;</td><td>Makefile for LCC-Win32 for Windows</td></tr>
@@ -750,7 +752,7 @@ version of GLFW.
 <tr valign="top"><td>&nbsp;Makefile.win32.msvc</td><td>&nbsp;</td><td>Makefile for MS Visual C++ 6.x for Windows</td></tr>
 <tr valign="top"><td>&nbsp;Makefile.win32.ow</td><td>&nbsp;</td><td>Makefile for OpenWatcom for Windows</td></tr>
 <tr valign="top"><td>&nbsp;Makefile.x11.in</td><td>&nbsp;</td><td>Makefile template, which is used by compile.sh</td></tr>
-<!--<tr valign="top"><td>&nbsp;PkgInfo</td><td>&nbsp;</td><td>Used for creating Mac OS X bundles</td></tr>-->
+<tr valign="top"><td>&nbsp;PkgInfo</td><td>&nbsp;</td><td>Used for creating Mac OS X bundles</td></tr>
 <tr valign="top"><td>&nbsp;boing.c</td><td>&nbsp;</td><td>An example program</td></tr>
 <tr valign="top"><td>&nbsp;gears.c</td><td>&nbsp;</td><td>An example program</td></tr>
 <tr valign="top"><td>&nbsp;keytest.c</td><td>&nbsp;</td><td>An example program</td></tr>
