Changed names of the PDF manuals

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 <html>
 
-<!-- $Id: readme.html,v 1.16 2003-11-12 22:41:55 marcus256 Exp $ -->
+<!-- $Id: readme.html,v 1.17 2003-11-24 19:52:06 marcus256 Exp $ -->
 
 <head>
   <title>GLFW Readme file</title>
@@ -266,8 +266,8 @@ preferrably <b>/usr/local/include</b>, i.e.:
   <li>How to compile programs that use GLFW</li>
 </ol>
 
-<p>The first point is covered in the <a href="docs/glfwug.pdf">GLFW
-Users Guide</a> and the <a href="docs/glfwrm.pdf">GLFW Reference
+<p>The first point is covered in the <a href="docs/UsersGuide.pdf">GLFW
+Users Guide</a> and the <a href="docs/Reference.pdf">GLFW Reference
 Manual</a>, and I suggest that you read at least the Users Guide, since
 it is a good introduction to the GLFW API.
 
@@ -736,8 +736,8 @@ version of GLFW.
 <tr valign="top"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
 
 <tr valign="top"><td><b>docs/</b></td><td>&nbsp;</td><td>Directory containing GLFW manuals in PDF format</td></tr>
-<tr valign="top"><td>&nbsp;glfwug14.pdf</td><td>&nbsp;</td><td>GLFW Users Guide 1.4 (for GLFW 2.4.x)</td></tr>
-<tr valign="top"><td>&nbsp;glfwrm14.pdf</td><td>&nbsp;</td><td>GLFW Reference Manual 1.4 (for GLFW 2.4.x)</td></tr>
+<tr valign="top"><td>&nbsp;UsersGuide.pdf</td><td>&nbsp;</td><td>GLFW Users Guide</td></tr>
+<tr valign="top"><td>&nbsp;Reference.pdf</td><td>&nbsp;</td><td>GLFW Reference Manual</td></tr>
 <tr valign="top"><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
 
 <tr valign="top"><td><b>examples/</b></td><td>&nbsp;</td><td>Directory containing several example programs</td></tr>
